--- a/requirements.txt
+++ b/requirements.txt
@@ -27,4 +27,4 @@ loguru>=0.6.0  # Advanced logging functionality
 pynacl>=1.5.0  # Required for voice support in Discord bots
 openai>=0.10.0
 transformers>=4.0.0
-twitch.io
+twitchio>=2.1.0  # Twitch library for interacting with Twitch API
